--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.ts",
 	"scripts": {
-		"start":"node build/index.js",
+		"start": "node build/index.js",
+		"start:docker": "npm run build && npm start",
 		"dev": "nodemon ",
 		"build": "tsc && tsc-alias",
 		"pretty": "prettier --write src/**/*.{ts,tsx,css}"
