--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,9 @@
 		"strict": true /* Enable all strict type-checking options. */,
 		"noImplicitAny": true /* Enable error reporting for expressions and declarations with an implied 'any' type. */
 	},
-	"include": ["src/**/*"]
+	"include": ["src/**/*"],
+	"ts-node": {
+		"files": true
+	},
+	"files": ["src/server.d.ts"]
 }
