--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^1.5.1",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"firebase-admin": "^11.11.0",
+		"jsonwebtoken": "^9.0.2",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
+		"@types/cookie-parser": "^1.4.4",
 		"@types/cors": "^2.8.14",
 		"@types/express": "^4.17.18",
 		"nodemon": "^3.0.1",
